# simplexity

./: CONTRIBUTING.md  pyproject.toml
.github/workflows/: claude-code-review.yml  copilot-review.yml  e2e-tests.yaml  generate-pr-description.yml  simplexity.yaml
docs/: LOAD_SUBCONFIGS.md
scripts/: collect_activations.py  persistent_homology.py
simplexity/: logger.py
simplexity/activations/: activation_analyses.py  activation_tracker.py
simplexity/analysis/: layerwise_analysis.py  linear_regression.py  pca.py
simplexity/cli/: __init__.py  run_parallel.py
simplexity/generative_processes/: builder.py  data_prefetcher.py  factored_generative_process.py  generalized_hidden_markov_model.py  generator.py  hidden_markov_model.py  independent_factored_generative_process.py  inflated_vocabulary_process.py  noisy_channel.py  nonergodic_generative_process.py  torch_generator.py
simplexity/generative_processes/structures/: __init__.py  conditional_transitions.py  fully_conditional.py  independent.py  indexing.py  sequential_conditional.py
simplexity/run_management/: components.py  run_management.py
simplexity/structured_configs/: base.py  learning_rate_scheduler.py  mlflow.py  mlflow_defaults.py  optimizer.py  predictive_model.py  validation.py
simplexity/utils/: factoring_utils.py
tests/: test_logger.py
tests/activations/: test_activation_analysis.py  test_activation_tracker.py
tests/analysis/: test_layerwise_analysis.py  test_linear_regression.py  test_metric_keys.py  test_pca.py
tests/cli/: test_run_parallel.py
tests/end_to_end/: conftest.py  test_load_config_from_mlflow.py  test_managed_run_mlflow_defaults.py  test_metric_tracker_integration.py  training.py
tests/end_to_end/configs/: logging.ini  test_metric_tracker.yaml  training.yaml  training_factored.yaml  training_test.yaml
tests/end_to_end/configs/activation_tracker/: default.yaml
tests/end_to_end/configs/generative_process/: nonergodic_example.yaml  rrxor.yaml  unified_chain_3mess3_2tomq.yaml  unified_chain_example.yaml  unified_independent_example.yaml  unified_independent_example_crazy.yaml  unified_symmetric_example.yaml  unified_transition_and_emission_coupled_example.yaml  unified_transition_coupled_example.yaml
tests/end_to_end/configs/lr_scheduler/: reduce_lr_on_plateau.yaml  windowed_reduce_lr_on_plateau.yaml
tests/end_to_end/configs/metric_tracker/: basic.yaml
tests/end_to_end/configs/optimizer/: pytorch_adam_factored.yaml
tests/end_to_end/configs/predictive_model/: tiny_transformer.yaml  transformer.yaml
tests/end_to_end/configs/training/: full.yaml  minimal.yaml
tests/end_to_end/mlflow_defaults_configs/: composition_order_self_first.yaml  composition_order_self_first_expected.yaml  composition_order_self_last.yaml  composition_order_self_last_expected.yaml  full_default_copy.yaml  full_default_copy_expected.yaml  implicit_artifact_select.yaml  implicit_artifact_select_expected.yaml  implicit_config_select.yaml  implicit_config_select_expected.yaml  load_default_config_at_package.yaml  load_default_config_at_package_expected.yaml  load_nondefault_config.yaml  load_nondefault_config_expected.yaml  load_subconfig.yaml  load_subconfig_expected.yaml  load_subconfig_select.yaml  load_subconfig_select_expected.yaml  multiple_runs.yaml  multiple_runs_expected.yaml  override_flag.yaml  override_flag_expected.yaml
tests/end_to_end/mlflow_defaults_configs/mlflow/: prev_run_1.yaml  prev_run_2.yaml
tests/end_to_end/mlflow_defaults_configs/setup/: prev_config_1.yaml  prev_config_2.yaml  special_1.yaml  special_2.yaml
tests/end_to_end/mlflow_defaults_configs/setup/group_a/: subconfig_a1.yaml  subconfig_a2.yaml
tests/end_to_end/mlflow_defaults_configs/setup/group_b/: subconfig_b1.yaml  subconfig_b2.yaml
tests/generative_processes/: test_builder.py  test_data_prefetcher.py  test_factored_generative_process.py  test_factored_structures.py  test_generator.py  test_hidden_markov_model.py  test_independent_factored_generative_process.py  test_inflated_vocabulary_process.py  test_noisy_channel.py  test_nonergodic_generative_process.py  test_torch_generator.py  test_transition_matrices.py
tests/optimization/: test_lr_schedulers.py
tests/run_management/: test_load_mlflow_defaults.py
tests/structured_configs/: test_activation_tracker_config.py  test_base_config.py  test_generative_process_config.py  test_learning_rate_scheduler.py  test_predictive_model_config.py
tests/utils/: test_analysis_utils.py  test_factoring_utils.py
walkthroughs/: pr-172.json
