[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simplexity"]

[project]
name = "simplexity"
version = "0.1"
description = "Computational Mechanics of sequence prediction models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex",
    "dotenv",
    "equinox>=0.13.0",
    "hydra-core",
    "hydra-optuna-sweeper",
    "jax>=0.8.0",
    "matplotlib",
    "mlflow>=3.0.0",
    "plotly",
    "torch>=2.9.0",
    "transformer-lens>=2.15.4",
    "treescope",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.37.24"] # Deprecated S3 Persister.
cuda = [
    "jax[cuda12_pip]",
    "jax-cuda12-plugin>=0.8.0",
    "jax-cuda12-pjrt>=0.8.0",
    "nvidia-cuda-runtime-cu12>=12.6.0",
    "nvidia-cudnn-cu12>=9.8.0",
    "nvidia-cublas-cu12>=12.6.0",
    "nvidia-cufft-cu12>=11.3.0",
    "nvidia-curand-cu12>=10.3.0",
    "nvidia-cusolver-cu12>=11.7.0",
    "nvidia-cusparse-cu12>=12.5.0",
    "nvidia-cuda-cupti-cu12>=12.6.0",
    "nvidia-cuda-nvcc-cu12>=12.8.0",
]
dev = [
    "diff-cover",
    "jaxtyping",
    "pylint",
    "pylint-per-file-ignores",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-testmon",
    "ruff",
]
penzai = [
    "orbax-checkpoint",
    "penzai",
] # Deprecated: penzai is no longer maintained.

[project.scripts]
simplexity-multirun = "simplexity.cli.run_parallel:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",   # undocumented-public-module
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "SIM108", # Use the ternary operator
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "D",   # pydocstyle https://www.pydocstyle.org/en/stable/error_codes.html
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*.ipynb" = ["D"]

[tool.pylint.MASTER]
# Add project root to Python path so pylint can resolve simplexity imports
init-hook = 'import sys; import os; sys.path.insert(0, os.path.abspath("."))'
load-plugins = ["pylint_per_file_ignores"]

[tool.pylint."MESSAGES CONTROL"]
# Disable line-too-long check since ruff handles line length (120 chars)
disable = ["line-too-long", "duplicate-code"]
per-file-ignores = ["tests/**:redefined-outer-name"]

[tool.pylint.IMPORTS]
# Ignore simplexity module to prevent astroid crashes during import resolution
# This is a known bug: https://github.com/pylint-dev/pylint/issues/10185
ignored-modules = ["simplexity"]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryEllipsis = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=simplexity",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    # Note: --cov-fail-under is intentionally not set here to allow gradual improvement
    # of overall coverage. The CI workflow explicitly sets --cov-fail-under=0 to track
    # coverage without blocking. New code in PRs is strictly checked via diff-cover (80% threshold).
    # To check overall coverage locally, use: pytest --cov-fail-under=80
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["simplexity"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "*/venv/*",
    "*/.venv/*",
    # TODO(#108): Remove this exclusion once tests are added for run_management.py
    # See https://github.com/Astera-org/simplexity/issues/108 for requirements and success criteria
    "simplexity/run_management/run_management.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2
# Note: fail_under is not set to allow gradual improvement
# New code in PRs is strictly checked via diff-cover (80% threshold)
# To enforce overall coverage, set fail_under = 80.0
